--- a/drizzle-neon-rr7-hono-starter/package.json
+++ b/drizzle-neon-rr7-hono-starter/package.json
@@ -43,6 +43,7 @@
     "drizzle-kit": "^0.31.5",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
     "vite": "^7.1.9",
